k8s/clusters/in-cluster/ingresses/argo-rollouts-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-proxy
  namespace: argo-rollouts
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-authentik
  namespace: argo-rollouts
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
spec:
  rules:
    - host: argo-rollouts.mareo.fr
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - argo-rollouts.mareo.fr
      secretName: argo-rollouts-tls
