k8s/clusters/in-cluster/ingresses/grafana-agent-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-agent-authentik
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
spec:
  rules:
    - host: grafana-agent.mareo.fr
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - grafana-agent.mareo.fr
      secretName: grafana-agent-tls
