k8s/clusters/in-cluster/ingresses/syncthing-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-proxy
  namespace: syncthing
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-authentik
  namespace: syncthing
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
spec:
  rules:
    - host: syncthing.mareo.fr
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - syncthing.mareo.fr
      secretName: syncthing-tls
